--- a/smodelsPars/parameters_2mdm.ini
+++ b/smodelsPars/parameters_2mdm.ini
@@ -5,14 +5,14 @@ doInvisible = True ;Set True if invisible compression should be performed, False
 doCompress = True ;Set True if mass compression should be performed, False elsewise
 computeStatistics = True ;Set True to compute the likelihoods L_BSM, L_SM and L_max for EM-type results.
 testCoverage = True ;Set True if topologies not covered by experiments (missing topologies) should be identified, False otherwise
-combineSRs = False ;Set True to combine signal regions when covariance matrix or pyhf JSON likelihood is available. Caution, increases runtime! False uses only best SR (faster).
+combineSRs = True ;Set True to combine signal regions when covariance matrix or pyhf JSON likelihood is available. Caution, increases runtime! False uses only best SR (faster).
 combineAnas = ATLAS-SUSY-2018-22-multibin,CMS-EXO-20-004 ; list of statistically independent analyses to combine. Works for EM-type results only. Use with care! (Also, for the time being, it is advisable to use only if combineSRs=False)
 
-reportAllSRs = False ;Set True to report all signal regions, instead of best signal region only. 
+reportAllSRs = True ;Set True to report all signal regions, instead of best signal region only. 
 experimentalFeatures = False ;Set True to enable experimental features that are not yet considered part of SModelS proper. Use only if you know what you are doing!!
 
 [particles]
-model=2mdm_example.slha ; path to the BSM model file. It can be a python module with definition of BSM particles or a SLHA file with QNUMBERS blocks. If omitted, we search in the current working directory as well as "smodels/share/models". MSSM is the default.
+model = 2mdm_example.slha ; path to the BSM model file. It can be a python module with definition of BSM particles or a SLHA file with QNUMBERS blocks. If omitted, we search in the current working directory as well as "smodels/share/models". MSSM is the default.
 promptWidth = 1e-11 ; All particles with widths (in GeV) above this value are considered prompt
 stableWidth = 1e-25 ; All particles with widths (in GeV) below this value are considered stable
 erasePrompt = eCharge,colordim ; Quantum numbers to be erase for promptly decaying particles (more inclusive results, but not always valid)
@@ -26,10 +26,10 @@ ncpus = 1 ;Give number of cores used when running in parallel (integer, -1 means
 
 #Select database analyses
 [database]
-path = /home/camila/smodels-database ; URL to the database pickle file (it will be downloaded)
+path = /Users/ramos/smodels-database ; URL to the database pickle file (it will be downloaded)
 #can be extended by: +fastlim (adds fastlim results), +superseded (adds superseded results), +nonaggregated (adds results with non-aggregated SRs in addition to the aggregated results), +full_llhds (replaces simplified HistFactory likelihoods by full ones). 
 # examples: path = official+nonaggregated, path = official+full_llhds
-useNonValidated = True
+useNonValidated = False
 analyses = all ;Set all to use all analyses included in the database
 #to use only specific analyses, give a list of the names separated by comma
 # analyses = CMS-PAS-SUS-13-008, CMS-SUS-13-013,ATLAS-CONF-2013-024,ATLAS-SUSY-2013-04
@@ -37,12 +37,12 @@ analyses = all ;Set all to use all analyses included in the database
 # Filter centre-of-mass energy with suffix beginning with a colon, in unum-style, like :13*TeV
 # Note that the asterisk in the suffix is not a wildcard.
 
-txnames= all ;Set all to use all constraints included in the database
+txnames = all ;Set all to use all constraints included in the database
 #to use only specific constraints, give a list of the names separated by comma
 #txnames = T2,T1,TChiWZ
 # Wildcards are understood as in shell-expansion of file names: * ? [<list of letters>]
 
-dataselector= all ; Set all to use all upper limit and efficiency maps results in the database. Set to upperLimit (efficiencyMap) to use only UL (EM) results:
+dataselector = all ; Set all to use all upper limit and efficiency maps results in the database. Set to upperLimit (efficiencyMap) to use only UL (EM) results:
 #dataselector = efficiencyMap
 #It can also be used to select specific datasets (signal regions) from efficiency map results. For the latter provide a list of the desired dataset ids
 #dataselector = SRA mCT150,SRA mCT200
@@ -76,7 +76,7 @@ expandedOutput = True ; Set True to print the full list of results. If False wil
 #options for python printer
 [python-printer]
 addSMSList = False ;Set True to print full list of SMS to python and xml format, False elsewise. Note that these are all SMS after decomposition and the list can be very long.
-addTxWeights = False ; Set True to print the contribution from individual topologies to each theory prediction.
+addTxWeights = True ; Set True to print the contribution from individual topologies to each theory prediction.
 
 #options for xml printer
 [xml-printer]
